--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,18 @@
   <title>Project Title</title>
 </head>
 <body>
-	<div class="page-wrap">
-		<button id="generate-numbers">Start</button>
-		<div id="buttons-wrap"></div>
-	</div>
-</body>
+  <div class="page-wrap">
+    <div class="page-menu">
+      <button id="generate-numbers">Start</button>
+      <button id="reset">Stop</button>
+      <div>
+        <div>Timer:</div>
+        <div id="timer">00 : 00 . 000</div>
+      </div>
+      </div>
+      <div class="page-table">
+      <div id="buttons-wrap"></div>
+    </div>
+    </div>
+  </body>
 </html>
