--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Project Title</title>
-</head>
-<body>
-  <div class="page-wrap">
-    <div class="page-menu">
-      <button id="generate-numbers">Start</button>
-      <button id="reset">Stop</button>
-      <div>
-        <div>Timer:</div>
-        <div id="timer">00 : 00 . 000</div>
-      </div>
+  <head>
+    <meta charset="UTF-8">
+    <title>Project Title</title>
+  </head>
+  <body>
+    <div class="page-wrap">
+      <div class="page-menu">
+        <div>
+          <div id="timer">00 : 00 . 000</div>
+        </div>
       </div>
       <div class="page-table">
-      <div id="buttons-wrap"></div>
-    </div>
+        <div id="buttons-wrap">
+          <div id="instructions">  
+            <p>Zasady gry</p>
+            <p>Zaczynając od 1, znajdź jak najwięcej kolejnych liczb naturalnych. Na wykonanie zadania masz 2 minuty</p>
+            <button id="generate-numbers">Start</button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
