--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="page-wrap">
-      <div class="page-menu">
+      <div id="page-menu">
         <div>
           <div id="timer">00 : 00 . 000</div>
         </div>
