--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
       <div class="page-table">
         <div id="buttons-wrap">
           <div id="instructions">  
-            <p>Zasady gry</p>
+            <h1>Graj. Trenuj. Zwyciężaj</h1>
             <p>Zaczynając od 1, znajdź jak najwięcej kolejnych liczb naturalnych. Na wykonanie zadania masz 2 minuty</p>
             <button id="generate-numbers">Start</button>
           </div>
         </div>
       </div>
     </div>
+    <footer class="page-footer">www.dorastaniewgrze.pl</footer>
   </body>
 </html>
