--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Project Title</title>
+    <title>ML Game</title>
   </head>
   <body>
     <div class="page-wrap">
       <div id="page-menu">
-        <div>
-          <div id="timer">00 : 00 . 000</div>
-        </div>
+				<svg id="timer-shape-l">
+					  <path d="M116.486,29.036c-23.582-8-14.821-29-42.018-29h-62.4C5.441,0.036,0,5.376,0,12.003v28.033h122v-11H116.486
+										z">
+									</svg>
+          <div id="timer">00 : 00</div>
+					<button id="new-game">Nowa gra</button>
+				<svg id="timer-shape-r">
+					  <path d="M116.486,29.036c-23.582-8-14.821-29-42.018-29h-62.4C5.441,0.036,0,5.376,0,12.003v28.033h122v-11H116.486
+										z">
+									</svg>
       </div>
       <div class="page-table">
         <div id="buttons-wrap">
